# Gabriel-portfolio

Matrix-calculator/: CMakeLists.txt  dodawanie_odejmowanie.cpp  macierz1.cpp  main.cpp  menu.cpp  operacje_macierze.cpp  wyznacznik_odwracanie.cpp  wyznacznik_odwracanie.h  zap2_projekt_beta.pro
Matrix_calculator/: Doxyfile  dodawanie_odejmowanie.cpp  dodawanie_odejmowanie.h  macierz1.cpp  macierz1.h  main.cpp  menu.cpp  menu.h  odwracanie.h  operacje_macierze.cpp  operacje_macierze.h  wyznacznik_odwracanie.cpp
